<resources>
    <string name="app_name">Meet17Practice</string>
    <string name="surname">Surname</string>
    <string name="name">Name</string>
    <string name="second_name_edittext">Second name</string>
    <string name="send">Check this person</string>
    <string name="add">Add person to list</string>
    <string name="check_list">Check List of Persons</string>
</resources>
