<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ThirdActivity">
    <TextView
        android:id="@+id/third_activity_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>